# Pianist-MJ

./: .flake8  .gitignore  pyproject.toml
pianist_mj/music/: music_sequence.py
pianist_mj/robots/: piano_articulation.py
pianist_mj/robots/prime/: prime_constants.py  prime_wuji_constants.py
pianist_mj/tasks/piano/config/prime_wuji/: __init__.py  cfg.py
pianist_mj/tasks/piano/mdp/: __init__.py  commands.py  math_functions.py  rewards.py
pianist_mj/tasks/reach/: cfg.py
pianist_mj/tasks/reach/config/prime/: __init__.py  cfg.py
pianist_mj/tasks/reach/mdp/: __init__.py  commands.py  rewards.py
scripts/: list_envs.py  play.py  train.py
